syntax  = "proto3";

// import  "EventHookPhase.proto";
import  "Data.proto";
package ULZProto;

option  csharp_namespace        = "ULZAsset.ProtoMod";
option  go_package              = "proto";


// ANCHOR: message-struct for game-service
// SECTION: message.proto
// -------------------------------------------------------------
message SESkillCalReq {
    repeated EventCard          income_card                 = 1;
    repeated SkillSet           feat                        = 2;
    string                      from_cli                    = 3;
    EventCardType               targ_type                   = 4;
}

message SESkillCalResp {
    int32                       result_val                  = 1;
    repeated EffectResult       effect_result               = 2;
    EventCardType               targ_type                   = 3;
}

message SEDiceCalReq    {
    int32                       income_dice                 = 1;
    int32                       act                         = 2;
    repeated EffectResult       effect_result               = 3;
}

message SEDiceCalResp   {
    repeated DiceResultSet      dice_result                 = 1;
}

message DiceResultSet {
    repeated int32             value                       = 1;
}

message SEEffectCalReq {
    string                      id                          = 1;
    EffectTiming                from_time                   = 2;
    EffectTiming                to_time                     = 3;
    GameDataSet                 gameset_instant             = 4;
    string                      from_cli                    = 5;
    string                      remark                      = 6;
}

message SEEffectCalResp{
    string                      id                          = 1;
    string                      from_cli                    = 2;
    GameDataSet                 gameset_result              = 3;   
    repeated string             result_info                 = 4;
    EffectTiming                from_time                   = 5;
    EffectTiming                to_time                     = 6;
}